src/App.scss
$primary: #6ce299;
$secondary: #ffaf81;
$accent: #7b9eff;
// $primary: #be6836;
// $secondary: #aa1919;
// $accent: #ff893a;
$light: #ecedee;

@import "bootstrap/scss/bootstrap";

body {
  background-color: $light;
}
#leftcol,#rightcol {
  background-color: white;
}

#fixedBottomButton {
  font-size: 0.9rem;
  position: fixed;
  bottom: 1rem;
  left: 1rem;
  img {
    max-height: 0.8em;
    vertical-align: baseline;
  }
}

#leftcol {
  border-right: 1px solid $gray-400;
  height: 100vh;
  overflow: hidden;
  margin-bottom: 0;
  padding: 0;
}

.hide-md {
  display: none;
}

#collapse-list {
  padding-top: 0.8rem;
  padding-bottom: 0.8rem;

  ul {
    margin-bottom: 0;
  }
}

.navbar {
  border-bottom: 1px solid $gray-400;
  background: linear-gradient(90deg, white, darken($light, 4%));
  background-size: 500%;
  background-position: 60%;
  transition: background-size 0.18s;
  padding: 1rem 1.5rem;
  justify-content: space-between;
  img {
    transition: unset;
  }
  &.navdark {
    background-size: 100%;
    transition: background-size 0.18s;
  }
}

#title {
  font-weight: 900;
  font-size: 1.8rem;
  line-height: 1.5rem;
  text-decoration: none;
  z-index: 1;
  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

#rightcol {
  padding: 0;
  .projectholder {
    ul {
    margin-left: 1.5rem;
    }
    >:not(.container-fluid) {
      padding-left: 1.5rem;
      padding-right: 1.3rem;
    }
    >:first-child {
      padding-top: 1.3rem;
    }
    >:last-child {
      padding-bottom: 3rem;
    }
  }
}

img {
  max-width: 100%;
}

a {
  overflow: hidden;
  color:darken($accent, 10%);
  &:hover{
    color: darken($accent,40%);
  }
}

.cardbox {
  display: flex;
  gap: 1rem;
  margin: 3rem;  

  img {
    transition: all 0.5s;

    &:hover {
      transform: scale(105%);
      opacity: 0.5;
    }
  }

  .card {
    max-width: 13rem;
  }
}

.brandholder {
  display: flex;
  align-items: center;
  flex-direction: row;
  a {
    color: inherit;
  }
  p {
    margin: 0;
  }
}

@media print{
  .collapse {
    display: none;
  }
  .brandholder {
    color: #000;
    a {
      color: #000;
    }
  }
}

@include media-breakpoint-up(md) {
  html,body {
    overflow: hidden;
  }
  .col {
    max-height: 100vh;
  }
  #rightcol {
    height: 100vh;
    overflow-y: auto;
  }
}

@include media-breakpoint-down(md) {
  .hide-md {
    display: block;
  }

  $my-shadow: rgba(0, 0, 0, 0.25) 0px 1px 3px;

  #leftcol{ 
    height: unset;
    z-index: 5;
    border: none;
    box-shadow: $my-shadow;
  }
  
  .navbar {
    border: none;
    box-shadow: $my-shadow;
  }

  #collapse-list {
    font-size: 1.25rem;
    padding-bottom: 1.3rem;
  }

  .collapse.show, .collapsing {
    background-color: $gray-100;
  }
  
  #title {
    margin-left: 0;
  }
}

